GeoQuiz-HW11-2 HW12-2 (Update)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MohsenAkhlaghi_HW10_GeoQuiz">
-        <activity
-            android:name=".GeoQuiz"
-            android:exported="false"
-            tools:ignore="Instantiatable" />
-        <activity
-            android:name=".CheatActivity"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|screenLayout"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
